tests/toy/neg/000764_mutation.toylang
program a = { a = 0 then; } .
